--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -293,20 +293,17 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         run: npx semantic-release
 
-      - name: Install required packages
-        run: sudo apt update && sudo apt install curl jq
-
       - name: Upload the x86 built binaries to the release
         run: |
           ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq '.assets_url')
           NAME=this-week-in-past-x86_64-unknown-linux-musl
-          PATH=./target/x86_64-unknown-linux-musl/release/this-week-in-past
+          BIN_PATH=./target/x86_64-unknown-linux-musl/release/this-week-in-past
           curl \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            --data-binary "@${PATH}" \
+            --data-binary "@${BIN_PATH}" \
             ${ASSETS_URL}?name=${NAME}
 
       - name: Upload the aarch64 built binaries to the release
