--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -295,7 +295,7 @@ jobs:
 
       - name: Upload the x86 built binaries to the release
         run: |
-          ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq '.assets_url')
+          ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq -r '.assets_url')
           NAME=this-week-in-past-x86_64-unknown-linux-musl
           BIN_PATH=./target/x86_64-unknown-linux-musl/release/this-week-in-past
           curl \
