--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -298,6 +298,7 @@ jobs:
           ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq -r '.assets_url')
           NAME=this-week-in-past-x86_64-unknown-linux-musl
           BIN_PATH=./target/x86_64-unknown-linux-musl/release/this-week-in-past
+          echo ASSETS_URL=$ASSETS_URL
           curl \
             -X POST \
             -H "Accept: application/vnd.github+json" \
@@ -308,41 +309,44 @@ jobs:
 
       - name: Upload the aarch64 built binaries to the release
         run: |
-          ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq '.assets_url')
+          ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq -r '.assets_url')
           NAME=this-week-in-past-aarch64-unknown-linux-musl
-          PATH=./target/aarch64-unknown-linux-musl/release/this-week-in-past
+          BIN_PATH=./target/aarch64-unknown-linux-musl/release/this-week-in-past
+          echo ASSETS_URL=$ASSETS_URL
           curl \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            --data-binary "@${PATH}" \
+            --data-binary "@${BIN_PATH}" \
             ${ASSETS_URL}?name=${NAME}
 
       - name: Upload the armv7 built binaries to the release
         run: |
-          ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq '.assets_url')
+          ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq -r '.assets_url')
           NAME=this-week-in-past-armv7-unknown-linux-musleabihf
-          PATH=./target/armv7-unknown-linux-musleabihf/release/this-week-in-past
+          BIN_PATH=./target/armv7-unknown-linux-musleabihf/release/this-week-in-past
+          echo ASSETS_URL=$ASSETS_URL
           curl \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            --data-binary "@${PATH}" \
+            --data-binary "@${BIN_PATH}" \
             ${ASSETS_URL}?name=${NAME}
 
       - name: Upload the arm v6 built binaries to the release
         run: |
-          ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq '.assets_url')
+          ASSETS_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq -r '.assets_url')
           NAME=this-week-in-past-arm-unknown-linux-musleabihf
-          PATH=./target/arm-unknown-linux-musleabihf/release/this-week-in-past
+          BIN_PATH=./target/arm-unknown-linux-musleabihf/release/this-week-in-past
+          echo ASSETS_URL=$ASSETS_URL
           curl \
             -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            --data-binary "@${PATH}" \
+            --data-binary "@${BIN_PATH}" \
             ${ASSETS_URL}?name=${NAME}
 
 
