--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -370,3 +370,11 @@ jobs:
           file: ./Containerfile
           load: false
           push: true
+
+      - name: Delete old releases
+        uses: dev-drprasad/delete-older-releases@v0.2.1
+        with:
+          keep_latest: 5
+          delete_tags: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
