--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -286,7 +286,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npm install -D semantic-release @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/changelog @semantic-release/npm @semantic-release/git @semantic-release/github semantic-release-conventional-commits
+          npm install -D semantic-release @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/changelog @semantic-release/npm @semantic-release/git @semantic-release/github @commitlint/config-conventional @commitlint/cli
 
       - name: Generate Semantic Release Notes and Create Release
         env:
