--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,8 @@ image = "0.24"
 log = "0.4"
 env_logger = "0.10"
 rand = "0.8"
-mime_guess = "2.0"
+# Use git version (https://github.com/knopp/mime_guess) of mime_guess until https://github.com/abonander/mime_guess/pull/82 is merged
+mime_guess = { git = "https://github.com/knopp/mime_guess", branch = "add_heif_jxl" }
 r2d2 = "0.8"
 rusqlite = { version = "0.29", features = ["bundled"] }
 r2d2_sqlite = "0.22"
