--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -147,6 +147,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
+        if: github.ref == 'refs/heads/main'
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4
 
       # Create a new release based on semantic versioning
