feat: omit concurrent pipelines builds

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -6,6 +6,10 @@ on:
       - opened
   workflow_dispatch: # allow manual execution
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 env:
   IMAGE_NAME: rouhim/this-week-in-past
 
