--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,8 @@ lazy_static = "1.4"
 serde = { version = "1.0.200", features = ["derive"] }
 serde_json = "1.0.116"
 chrono = { version = "0.4.38", features = ["serde"] }
-time = "0.3.36"
 md5 = "0.8"
 ureq = "3.0.0"
-actix-http = { version = "3.6", features = ["rustls"] }
 actix-web = { version = "4.5.1", features = ["rustls"] }
 clokwerk = "0.4"
 kamadak-exif = "0.6"
@@ -32,6 +30,9 @@ mime_guess = "2.0.5"
 r2d2 = "0.8.10"
 rusqlite = { version = "0.37", features = ["bundled"] }
 r2d2_sqlite = "0.31"
+
+[target.'cfg(target_env = "musl")'.dependencies]
+mimalloc = "0.1.43"
 
 [dev-dependencies]
 assertor = "0.0.4"
