--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ serde_json = "1.0.116"
 chrono = { version = "0.4.38", features = ["serde"] }
 md5 = "0.8"
 ureq = "3.0.0"
-actix-web = { version = "4.5.1", features = ["rustls"] }
 clokwerk = "0.4"
 kamadak-exif = "0.6"
 rayon = "1.10"
@@ -30,6 +29,8 @@ mime_guess = "2.0.5"
 r2d2 = "0.8.10"
 rusqlite = { version = "0.37", features = ["bundled"] }
 r2d2_sqlite = "0.31"
+warp = "0.3"
+tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal"] }
 
 [target.'cfg(target_env = "musl")'.dependencies]
 mimalloc = "0.1.43"
@@ -37,7 +38,6 @@ mimalloc = "0.1.43"
 [dev-dependencies]
 assertor = "0.0.4"
 pretty_assertions = "1.4"
-actix-rt = "2.9"
 ureq = "3.0.0"
 
 [profile.release]
